# AI-Assistant-Client

./: .gitignore  ChatBot.tree  LICENSE  README.es.md  README.md  checklist.txt  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
api/: .env  Cargo.toml  scheme.sql  sqlitedb.rs  test.sql
api/src/: main.rs
api/src/components/: dbfactory.rs  encrypt.rs  mod.rs  repository.rs  shandler.rs
api/src/identity/: chats.rs  files.rs  mod.rs  sessions.rs  users.rs
docs/: TODO.TXT
docs/api/: backend.md
scripts/: p.py
src/: App.tsx
src/components/ChatBot/: ChatBot.tsx
src/components/ChatBox/: ChatBox.tsx
src/components/ChatInput/: ChatInput.tsx
src/components/Message/: Message.tsx
src/components/MessageBox/: MessageBox.tsx
src/components/Navbar/: Navbar.tsx
src/components/SettingsPanel/: SettingsPanel.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/TextInput/: TextInput.tsx
src/components/UI/: ArrowSvg.tsx  generateWeveBars.tsx
src/components/VoiceBtn/: VoiceBtn.tsx
src/context/: MessagesContext.tsx  SettingsContext.tsx
src/css/: Global.css
src/data/: FakeMessages.ts
src/types/: custum.d.ts
src/utils/api/: handleDownload.ts  postMessages.ts
src/utils/audio/: PlayAudio.ts
src/utils/encryption/: encryptor.ts  fileEncryptor.ts
src/utils/hash/: hash-types.ts
src/utils/string/: fixLongName.ts  formatFileSize.ts  getFileIconClass.ts
